Review and modernize menu API for Java 25 (#7)
* Review and modernize menu API for Java 25

Menu API cleanup:
- Remove dead code: getBorderedIndex(), getBorderedSize(), getSlot() from Menu.java
  (none were referenced anywhere in the codebase)
- Remove deprecated placeholder(Material, byte, String...) varargs overload from Button
- Remove unused Button.fromItem() static factory (zero call sites)
- Remove stale @ConstructorProperties annotations from BackButton, BooleanButton,
  ConfirmMenu, JumpToPageButton, PageButton, ViewAllPagesMenu (not JavaBeans)
- Remove unused MenuInventoryHolder.copyLayout() static helper (inlined)
- Replace Guava ImmutableList.of() with java.util.List.of() in Button
- Replace Guava Preconditions.checkNotNull with Objects.requireNonNull in MenuBackButton
- Fix decompiler-artifact 'var1' parameter names across CloseButton, HookButton,
  HookMenu, ItemStackButton, PaginatedMenu
- Simplify PaginatedMenu arithmetic (remove redundant double casts)
- Use List.of() instead of new ArrayList<>() for empty immutable returns
  (BackButton, CloseButton, PageButton descriptions)
- Normalize ConfirmMenu size() to literal 27 instead of 9 * 3
- Clean up redundant parentheses in ItemStackButton.getButtonItem()
- Remove BooleanButton narrowing cast (byte) on getDamageValue()
- Mark Menu constructors as protected (abstract class)

Cross-version compatibility preserved:
- All Bukkit API usage unchanged (Inventory, InventoryHolder, ItemStack, etc.)
- XSeries abstractions retained for material/sound/enchantment cross-version support
- XInventoryView usage kept for Paper 1.8.8-26.1.2 InventoryView compat
- Scheduler abstraction unchanged (Paper/Folia aware)
- Pattern-matching instanceof (Java 16+) already in use, unchanged

Java 25 build fixes (pre-existing):
- Fix CC.java illegal forward references by reordering declarations
  (DARK_AQUA, DARK_GREEN, etc. defined before compound B_DARK_AQUA, etc.)
- Fix CommentedConfiguration.loadConfiguration() static method hi